# OpenCorpInsight

./: DEPLOY_GUIDE.md  DEPLOY_GUIDE.txt  Dockerfile  LOCAL_TEST_GUIDE.md  README.md  dart_dashbord.py  ecs-task-def.json  main_server.py  pom.xml  pyproject.toml  requirements.txt  test_prompt.txt  test_test.html
DB/: app.py  chatbot.db
app/: main.py  schemas.py  tool_registry.py
app/core/: cache.py  dart_client.py  news_client.py  rate_limit.py  secrets.py  services.py
cache/: dart_cache.db
front/: FRONTEND_UPDATE_GUIDE.md  README.md  build.gradle  setup.sh
front/src/main/resources/: application.yml
front/src/main/resources/mappers/: UserMapper.xml
front/src/main/webapp/WEB-INF/views/: chatBot.jsp  compare.jsp  index.jsp
opencorpinsight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: benchmark_analyzer.py  dart_mcp_server.py  news_analyzer.py
src/main/java/com/corpIns/: Main.java  OpenCorpInsightApplication.java
src/main/java/com/corpIns/config/: SecurityConfig.java  WebConfig.java
src/main/java/com/corpIns/controller/: CommonController.java  DashboardController.java  LoginController.java
src/main/java/com/corpIns/dto/: User.java
src/main/java/com/corpIns/mapper/: UserMapper.java
src/main/java/com/corpIns/service/: UserService.java
src/main/resources/: application.properties  application.yml
src/main/resources/mappers/: UserMapper.xml
src/main/webapp/ resources/css/: common.css
src/main/webapp/WEB-INF/views/: chatBot.jsp  compare.jsp  index.jsp
src/main/webapp/WEB-INF/views/common/: chatBot.jsp  chatBotDash.jsp  compare.jsp  (+2 more)
(+25 files in other folders)
