[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencorpinsight"
version = "0.1.0"
description = "OpenCorpInsight HTTP Tool API (MCP-style) for DART"
authors = [{ name = "OpenCorpInsight" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "httpx>=0.27.0",
  "pandas>=2.2.2",
  "boto3>=1.34.0",
  "redis>=5.0.4",
  "python-jose[cryptography]>=3.3.0",
  "pyjwt[crypto]>=2.7.0",
  "structlog>=24.1.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-requests>=0.48b0",
  "opentelemetry-instrumentation-redis>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
]
